--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -1157,3 +1157,77 @@
   volume     = {abs/1707.08101},
   year       = {2017}
 }
+
+@inproceedings{10.1007/978-981-16-5943-0_26,
+  abstract  = {Throughout the development of the global airport industry, increasing new technologies are applied to airport industry. In this paper, the concept of smart airport is proposed. Firstly, the development history of smart airport was introduced, and the construction needs of China's smart airports were studied. Then it analyzed the application of RFID technology, biometric technology, interactive wayfinding technology, big data and artificial intelligence technology at smart airports. The analytical results show that the application of the frontier technologies make the airport operation more efficient, decision-making more collaborative, control more accurate, and travel more convenient, thus helping the airport to accelerate the construction goal of intelligent airport.},
+  address   = {Singapore},
+  author    = {Liu, Kang
+               and Chen, Lei
+               and Liu, Xia},
+  booktitle = {Data Science},
+  editor    = {Zeng, Jianchao
+               and Qin, Pinle
+               and Jing, Weipeng
+               and Song, Xianhua
+               and Lu, Zeguang},
+  isbn      = {978-981-16-5943-0},
+  pages     = {319--330},
+  publisher = {Springer Singapore},
+  title     = {Research on Application of Frontier Technologies at Smart Airport},
+  year      = {2021}
+}
+
+@article{doi:10.1080/13669877.2013.879493,
+  author    = {Olja Čokorilo, Mario De Luca and Gianluca Dell’Acqua},
+  doi       = {10.1080/13669877.2013.879493},
+  eprint    = {https://doi.org/10.1080/13669877.2013.879493},
+  journal   = {Journal of Risk Research},
+  number    = {10},
+  pages     = {1325--1340},
+  publisher = {Routledge},
+  title     = {Aircraft safety analysis using clustering algorithms},
+  url       = {https://doi.org/10.1080/13669877.2013.879493},
+  volume    = {17},
+  year      = {2014}
+}
+
+@article{CostsOfUnsafetyAviation,
+  author  = {Cokorilo, Olja and Gvozdenovic, Slobodan and Vasov, Ljubiša and Mirosavljevic, Petar},
+  doi     = {10.3846/tede.2010.12},
+  journal = {Technological and Economic Development of Economy - TECHNOL ECON DEV ECON},
+  month   = {06},
+  pages   = {188-201},
+  title   = {Costs of unsafety in aviation},
+  volume  = {16},
+  year    = {2010}
+}
+
+@misc{Burnette2010,
+  author = {Heyward Burnette},
+  title = {Lab Demonstrates Robotic Ground Refueling of Aircraft},
+  howpublished = "\url{https://www.wpafb.af.mil/News/Article-Display/Article/400022/lab-demonstrates-robotic-ground-refueling-of-aircraft/}",
+  year = {2010},
+  month = oct,
+  note = {Accessed: 2024-07-24},
+  organization = {Materials and Manufacturing, Wright-Patterson Air Force Base}
+}
+
+@misc{Ficken2017,
+  author = {Nikki Ficken},
+  title = {Concept Demonstration Explores Robotic Aviation Refueling System},
+  year = {2017},
+  month = {July 18},
+  publisher = {AMRDEC Public Affairs},
+  url = {https://www.army.mil/article/190980/concept_demonstration_explores_robotic_aviation_refueling_system},
+  note = {Accessed: date-of-access}
+}
+
+@manual{AR3P2020,
+    title = {AR3P Program Background (2017-2019) and Robotic Hot Refueling Demonstrations (Sep-Oct 2020)},
+    author = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
+    year = {2020},
+    note = {Accessed: 2024-07-24},
+    organization = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
+    url = {hhttps://www.denix.osd.mil/ndcee/denix-files/sites/44/2023/09/EXSUM-AR3P-Robotic-Refueling-K-MAX-and-S-70-Sep_Oct-2020-v9.pdf},
+    abstract = {The Autonomous & Robotic Remote Refuel Point (AR3P) is a science \& technology (S\&T) program previously executed by the Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC). Funding sources include the OSD Coalition Warfare Program (US-UK), OSD Operational Energy Capability Improvement Fund (OECIF), DoD Rapid Innovation Fund (RIF), and Small Business Innovation Research. The AR3P system was demonstrated during the Maneuver Support, Sustainment, and Protection Integration Exercise (MSSPIX) at Fort Pickett VA in Sep 2020, focusing on autonomous refueling of a tactical helicopter.}
+}
